--- a/layouts/blog/baseof.html
+++ b/layouts/blog/baseof.html
@@ -28,7 +28,7 @@
 
     <div class="container pt-2 pt-md-6 pb-3 pb-md-6">
       <div class="row">
-        <div class="col-9">
+        <div class="col-12 col-lg-9">
           {{ block "main" . }}
           {{ end }}
         </div>
