Add yet another blog post

--- a/assets/scss/_bootstrap-variables.scss
+++ b/assets/scss/_bootstrap-variables.scss
@@ -15,7 +15,7 @@ $container-max-widths: (
 
 $grid-gutter-width: 20px;
 
-$primary: #ffca28;
+$primary: #2b86db;
 $secondary: #1de9b6;
 $black: #212529;
 
