--- a/assets/scss/pages/_blog.scss
+++ b/assets/scss/pages/_blog.scss
@@ -14,4 +14,11 @@
         font-weight: 400;
         line-height: 1.58;
     }
+    .content ul {
+        font-family: 'Lora', serif;
+        font-size: 21px;
+        font-weight: 400;
+        line-height: 1.58;
+    }
+
 } 
