--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -6,13 +6,13 @@
  <meta name="twitter:description" content="{{ .Summary }}">
  <meta name="twitter:creator" content="@kai_richard">
  <!-- Twitter summary card with large image must be at least 280x150px -->
- <meta name="twitter:image:src" content="{{ ((.Resources.GetMatch "images/splash**").Resize "800x q90").Permalink }}">
+ <meta name="twitter:image:src" content="{{ ((.Resources.GetMatch "images/splash**").Resize "800x q90").Permalink | absURL }}">
  
  <!-- Open Graph data -->
  <meta property="og:title" content="{{ .Title }}" />
  <meta property="og:type" content="article" />
- <meta property="og:url" content="{{ .Permalink }}" />
- <meta property="og:image" content="{{ ((.Resources.GetMatch "images/splash**").Resize "800x q90").Permalink }}" />
+ <meta property="og:url" content="{{ .Permalink | absURL}}" />
+ <meta property="og:image" content="{{ ((.Resources.GetMatch "images/splash**").Resize "800x q90").Permalink | absURL}}" />
  <meta property="og:description" content="{{ .Summary }}" />
  <meta property="og:site_name" content="Kai Richard König" />
  <meta property="article:published_time" content="{{.Date}}" />
