--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -1,4 +1,5 @@
 {{ define "header_css" }}
+<meta name="author" content="Kai Richard König">
  <!-- Twitter Card data -->
  <meta name="twitter:card" content="summary_large_image">
  <meta name="twitter:site" content="@kai_richard">
