--- a/layouts/partials/sub-footer.html
+++ b/layouts/partials/sub-footer.html
@@ -4,8 +4,9 @@
       <div class="col-12">
         <div class="sub-footer-inner">
           <ul>
-            <li >
-                ʕ •ᴥ•ʔ</li>
+            <li>
+              Built with Hugo and now.sh ʕ •ᴥ•ʔ
+            </li>
           </ul>
         </div>
       </div>
