--- a/layouts/partials/sub-footer.html
+++ b/layouts/partials/sub-footer.html
@@ -5,7 +5,7 @@
         <div class="sub-footer-inner">
           <ul>
             <li>
-              Built with Hugo and now.sh ʕ •ᴥ•ʔ
+              Built with Hugo and now.sh ʕ •ᴥ•ʔ - <a href="/imprint">Imprint</a>
             </li>
           </ul>
         </div>
