Add social icon and cleaning up print css

--- a/assets/scss/pages/_work.scss
+++ b/assets/scss/pages/_work.scss
@@ -101,6 +101,22 @@
   }
 }
 
+.education {
+  li::before {
+    content: "\f19d";
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    line-height: 1;
+    margin-right: 10px;
+  }
+}
+
 .work {
   .card:hover {
     box-shadow: $box-shadow;
