--- a/layouts/partials/sub-footer.html
+++ b/layouts/partials/sub-footer.html
@@ -2,20 +2,14 @@
   <div class="container">
     <div class="row">
       <div class="col">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/fontawesome.min.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/solid.min.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/brands.min.css">
-
-        <a class="float-left" href="https://stackoverflow.com/users/515399/krichard"><i
-            class="fab fa-stack-overflow"></i></a>
-        <a class="float-left" href="https://twitter.com/kai_richard"><i class="fab fa-twitter"></i></a>
-        <a class="float-left" href="https://github.com/kairichard"><i class="fab fa-github"></i></a>
-        <a class="float-left" href="https://www.xing.com/profile/KaiRichard_Koenig2"><i class="fab fa-xing"></i></a>
-        <a class="float-left" href="https://www.linkedin.com/in/kairichard/"><i class="fab fa-linkedin"></i></a>
-        <a class="float-left" href="https://www.hackerrank.com/kai_richard_koe1?hr_r=1"><i
-            class="fab fa-hackerrank"></i></a>
-        <a class="float-left"
-          href="https://cloudacademy.com/profile/74a30632-1be7-49b3-9020-029fa6215145/?nodes=aggregation-overall">
+        <a href="https://keybase.io/kairichard"><i class="fab fa-keybase"></i></a>
+        <a href="https://stackoverflow.com/users/515399/krichard"><i class="fab fa-stack-overflow"></i></a>
+        <a href="https://twitter.com/kai_richard"><i class="fab fa-twitter"></i></a>
+        <a href="https://github.com/kairichard"><i class="fab fa-github"></i></a>
+        <a href="https://www.xing.com/profile/KaiRichard_Koenig2"><i class="fab fa-xing"></i></a>
+        <a href="https://www.linkedin.com/in/kairichard/"><i class="fab fa-linkedin"></i></a>
+        <a href="https://www.hackerrank.com/kai_richard_koe1?hr_r=1"><i class="fab fa-hackerrank"></i></a>
+        <a href="https://cloudacademy.com/profile/74a30632-1be7-49b3-9020-029fa6215145/?nodes=aggregation-overall">
           <i class="fas fa-network-wired"></i>
         </a>
       </div>
