--- a/themes/hugo-whisper-theme/layouts/partials/header.html
+++ b/themes/hugo-whisper-theme/layouts/partials/header.html
@@ -6,6 +6,24 @@
     <div class="logo-mobile">
       <a href="{{ .Site.BaseURL }}"><img alt="Logo" src="{{ .Site.Params.logo.mobile | relURL }}" /></a>
     </div>
+    <div class="social">
+      <div class="row">
+        <div class="col">
+          <a class="" href="https://keybase.io/kairichard"><i class="fab fa-keybase"></i></a>
+          <a class="" href="https://stackoverflow.com/users/515399/krichard"><i class="fab fa-stack-overflow"></i></a>
+          <a class="" href="https://twitter.com/kai_richard"><i class="fab fa-twitter"></i></a>
+          <a class="" href="https://github.com/kairichard"><i class="fab fa-github"></i></a>
+          <a class="" href="https://www.xing.com/profile/KaiRichard_Koenig2"><i class="fab fa-xing"></i></a>
+          <a class="" href="https://www.linkedin.com/in/kairichard/"><i class="fab fa-linkedin"></i></a>
+          <a class="" href="https://www.hackerrank.com/kai_richard_koe1?hr_r=1"><i class="fab fa-hackerrank"></i></a>
+          <a class=""
+            href="https://cloudacademy.com/profile/74a30632-1be7-49b3-9020-029fa6215145/?nodes=aggregation-overall">
+            <i class="fas fa-network-wired"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+
     {{ partial "main-menu.html" . }}
     {{ partial "hamburger.html" . }}
   </div>
