--- a/layouts/about/list.html
+++ b/layouts/about/list.html
@@ -1,6 +1,27 @@
-{{ define "header_css" }}{{ end }}
 {{ define "body_classes" }}page-default-list{{ end }}
 {{ define "header_classes" }}{{ end }}
+
+{{ define "header_css" }}
+<meta name="author" content="Kai Richard König">
+<!-- Twitter Card data -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@kai_richard">
+<meta name="twitter:title" content="{{ .Title }}">
+<meta name="twitter:description" content="{{ .Summary }}">
+<meta name="twitter:creator" content="@kai_richard">
+<!-- Twitter summary card with large image must be at least 280x150px -->
+<meta name="twitter:image:src" content="{{ ((.Resources.GetMatch "head.jpg").Resize "400x q90").Permalink | absURL }}">
+
+<!-- Open Graph data -->
+<meta property="og:title" content="{{ .Title }}" />
+<meta property="og:type" content="article" />
+<meta property="og:url" content="{{ .Permalink | absURL}}" />
+<meta property="og:description" content="{{ .Summary }}" />
+<meta property="og:site_name" content="Kai Richard König" />
+<meta property="article:published_time" content="{{.Date}}" />
+<meta property="article:modified_time" content="{{.Lastmod}}" />
+<meta property="article:section" content="Profile" />
+{{ end }}
 
 {{ define "main" }}
 
