--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -19,7 +19,8 @@
 <meta property="og:description" content="{{ .Summary }}" />
 <meta property="og:site_name" content="Kai Richard König" />
 <meta property="article:published_time" content="{{.Date}}" />
-<meta property="article:modified_time" content="{{.Date}}" />
+<meta property="article:modified_time" content="{{.Lastmod}}" />
+
 {{ end }}
 {{ define "body_classes" }}page-default-single{{ end }}
 {{ define "header_classes" }}{{ end }}
