Fix broken images in blogpost

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -69,6 +69,12 @@ img[src$="left"] {
   margin-right: 20px;
 }
 
+img[src$="center"] {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 img[src$="right"] {
   display: block;
   float: right;
