--- a/layouts/work/list.html
+++ b/layouts/work/list.html
@@ -22,7 +22,7 @@
   <h3> Details </h3>
   <div class="row">
     <div class="col-3">
-      <div class="detail font-weight-bold">Bord</div>
+      <div class="detail font-weight-bold">Born</div>
       <div class="detail font-weight-bold">Nationality</div>
       <div class="detail font-weight-bold">Family status</div>
       <div class="detail font-weight-bold">Address</div>
