--- a/layouts/projects/list.html
+++ b/layouts/projects/list.html
@@ -27,7 +27,7 @@
           <div class="col">
             <div class="summary mb-2">
               <h2 class="mb-0">
-                <a href="{{ .Permalink }}">{{ .Title }}</a>
+                {{ .Title }}
               </h2>
             <div class="text-muted">{{ .Params.timeframe }} </div>
             </div>
