--- a/layouts/projects/list.html
+++ b/layouts/projects/list.html
@@ -10,7 +10,7 @@
   {{ .Content }}
 </div>
 
-{{ range (.Pages.ByParam "year").Reverse }}
+{{ range (.Pages.ByParam "order").Reverse }}
 <div class="mb-5 project">
   <div class="row">
     <div class="col-5">
