--- a/layouts/work/list.html
+++ b/layouts/work/list.html
@@ -108,6 +108,11 @@
 
 <h1 class="title mt-5">Certificates</h1>
 
+<div class="alert alert-info d-none d-print-block" role="alert">
+  The actual certifications are viewable at
+  <b>https://kairichardkoenig.de/about/work/</b>
+</div>
+
 <div class="row certificates">
   {{ $headless := (.Site.GetPage "/certificates").Pages.ByDate.Reverse }}
 
