Add calendly to website

--- a/themes/hugo-whisper-theme/layouts/partials/header.html
+++ b/themes/hugo-whisper-theme/layouts/partials/header.html
@@ -6,6 +6,7 @@
     <div class="logo-mobile">
       <a href="{{ .Site.BaseURL }}"><img alt="Logo" src="{{ .Site.Params.logo.mobile | relURL }}" /></a>
     </div>
+    <a href="https://calendly.com/l76/kai" class="btn btn-outline-secondary">Book a Call</a>
     <div class="social">
       <div class="row">
         <div class="col">
