--- a/assets/scss/_bootstrap-variables.scss
+++ b/assets/scss/_bootstrap-variables.scss
@@ -28,6 +28,7 @@ $theme-colors: (
   "bitspark": rgb(125, 0, 80),
   "hightext": rgb(253, 161, 0),
   "paessler": rgb(0, 44, 99),
+  "m2dot": rgb(234, 83, 85),
 );
 
 $background: #fff;
