Add clickable link, and fix a few errors.

--- a/layouts/work/list.html
+++ b/layouts/work/list.html
@@ -10,8 +10,8 @@
 
 <h1 class="title">{{ .Title }}</h1>
 <div class="alert alert-info d-none d-print-block" role="alert">
-  This document was generated automatically - For a better viewing experience and further details please visit
-  <b>https://kairichardkoenig.de</b>
+  This document was programmatically generated - For a better viewing experience and further details please visit
+  <b><a href="https://kairichardkoenig.de">https://kairichardkoenig.de</a></b>
 </div>
 
 <div class="content mb-6 d-none d-print-block">
