Add BCF and Talque

--- a/assets/scss/_bootstrap-variables.scss
+++ b/assets/scss/_bootstrap-variables.scss
@@ -29,6 +29,8 @@ $theme-colors: (
   "hightext": rgb(253, 161, 0),
   "paessler": rgb(0, 44, 99),
   "m2dot": rgb(234, 83, 85),
+  "bcf": rgb(230, 173, 52),
+  "talque": rgb(189, 126, 227)
 );
 
 $background: #fff;
