--- a/assets/scss/_bootstrap-variables.scss
+++ b/assets/scss/_bootstrap-variables.scss
@@ -30,7 +30,8 @@ $theme-colors: (
   "paessler": rgb(0, 44, 99),
   "m2dot": rgb(234, 83, 85),
   "bcf": rgb(230, 173, 52),
-  "talque": rgb(189, 126, 227)
+  "talque": rgb(189, 126, 227),
+  "ice": rgb(103, 183, 188)
 );
 
 $background: #fff;
