--- a/assets/scss/pages/_work.scss
+++ b/assets/scss/pages/_work.scss
@@ -2,8 +2,8 @@
 
 @media print {
   @page {
-    size: auto; /* auto is the initial value */
-    margin: 10mm 10mm 0mm 10mm; /* this affects the margin in the printer settings */
+    size: A4; /* auto is the initial value */
+    margin: 0 /* this affects the margin in the printer settings */
   }
 
   html {
